# linuxdo

./: .gitignore  Cargo.toml  Packager.toml  README.md  build.rs
.github/workflows/: build-release.yml  publish-edge-pre-release.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/linuxdo/accelerator/android/: LinuxdoBinary.kt  LinuxdoDns.kt  LinuxdoTileService.kt  LinuxdoVpnService.kt  MainActivity.kt
android/app/src/main/res/drawable/: ic_linuxdo_logo.xml  ic_linuxdo_logo_round.xml  ic_notification.xml  panel_surface.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
assets/defaults/: linuxdo-accelerator.toml
packaging/linux/: linuxdo-accelerator.desktop.hbs
packaging/macos/: dmgbuild_settings.py
scripts/: build-android-apk.sh  build-macos-dmg.sh  generate_icons.py  start-linux.sh  start-windows.ps1
src/: branding.rs  certs.rs  cli.rs  config.rs  gui.rs  hosts.rs  hosts_store.rs  lib.rs  paths.rs  platform.rs  proxy.rs  service.rs  state.rs
